// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SteadyBar> renders 1`] = `
.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 {
  border-top: 1px dotted gray;
  z-index: 5;
}

.c3 {
  position: absolute;
  bottom: 0px;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4:first-child {
  border-bottom-left-radius: 5px;
}

.c4:last-child {
  border-bottom-right-radius: 5px;
}

.c5 {
  position: absolute;
  bottom: 0;
  left: 0;
}

.c6 {
  fill: transparent;
}

.c7 {
  fill: white;
  display: hidden;
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <Resizable
      className="c2"
      enable={
        Object {
          "right": true,
          "top": true,
        }
      }
      grid={
        Array [
          1,
          1,
        ]
      }
      maxHeight={500}
      minHeight={25}
      minWidth={3}
      onResize={[Function]}
      onResizeStop={[Function]}
      size={
        Object {
          "height": 151.25,
          "width": 8.333333333333334,
        }
      }
    />
    <Resizable
      className="c2"
      enable={
        Object {
          "right": true,
          "top": true,
        }
      }
      grid={
        Array [
          1,
          1,
        ]
      }
      maxHeight={500}
      minHeight={25}
      minWidth={3}
      onResize={[Function]}
      onResizeStop={[Function]}
      size={
        Object {
          "height": 225.25,
          "width": 8.333333333333334,
        }
      }
    />
  </div>
  <div
    className="c3"
    style={
      Object {
        "backgroundColor": "#0E90D4",
        "flexDirection": "row",
        "height": 225.25,
      }
    }
  >
    <div
      className="c4"
      style={
        Object {
          "backgroundColor": "#807F80",
          "width": "0%",
        }
      }
    />
    <div
      className="c4"
      style={
        Object {
          "backgroundColor": "#0E90D4",
          "width": "53.37837837837838%",
        }
      }
    />
    <div
      className="c4"
      style={
        Object {
          "backgroundColor": "#00C46A",
          "width": "46.62162162162162%",
        }
      }
    />
    <div
      className="c4"
      style={
        Object {
          "backgroundColor": "#FFCB00",
          "width": "0%",
        }
      }
    />
    <div
      className="c4"
      style={
        Object {
          "backgroundColor": "#FF6430",
          "width": "0%",
        }
      }
    />
    <div
      className="c4"
      style={
        Object {
          "backgroundColor": "#E90000",
          "width": "0%",
        }
      }
    />
  </div>
  <svg
    className="c5"
    height="225.25"
    width="16.666666666666668"
  >
    <polygon
      className="c6"
      points="0,74 0,225.25 16.666666666666668,225.25 16.666666666666668,0"
    />
    <polygon
      className="c7"
      points="0,0 0,74 16.666666666666668,0"
    />
  </svg>
</div>
`;

exports[`<SteadyBar> renders with Tooltip when selected 1`] = `
.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 {
  border-top: 1px dotted gray;
  z-index: 5;
}

.c3 {
  position: absolute;
  bottom: 0px;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4:first-child {
  border-bottom-left-radius: 5px;
}

.c4:last-child {
  border-bottom-right-radius: 5px;
}

.c5 {
  position: absolute;
  bottom: 0;
  left: 0;
}

.c6 {
  fill: transparent;
}

.c7 {
  fill: white;
  display: hidden;
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <Tooltip
    interval={
      Object {
        "cadence": undefined,
        "endIntensity": 0.901,
        "id": "mock-id",
        "length": Object {
          "seconds": 50,
        },
        "pace": 0,
        "startIntensity": 0.605,
        "type": "ramp",
      }
    }
    mode={
      BikeMode {
        "ftp": 250,
        "lengthType": "time",
        "sportType": "bike",
        "weight": 75,
      }
    }
    onCadenceChange={[Function]}
  />
  <div
    className="c1"
    onClick={[Function]}
  >
    <Resizable
      className="c2"
      enable={
        Object {
          "right": true,
          "top": true,
        }
      }
      grid={
        Array [
          1,
          1,
        ]
      }
      maxHeight={500}
      minHeight={25}
      minWidth={3}
      onResize={[Function]}
      onResizeStop={[Function]}
      size={
        Object {
          "height": 151.25,
          "width": 8.333333333333334,
        }
      }
    />
    <Resizable
      className="c2"
      enable={
        Object {
          "right": true,
          "top": true,
        }
      }
      grid={
        Array [
          1,
          1,
        ]
      }
      maxHeight={500}
      minHeight={25}
      minWidth={3}
      onResize={[Function]}
      onResizeStop={[Function]}
      size={
        Object {
          "height": 225.25,
          "width": 8.333333333333334,
        }
      }
    />
  </div>
  <div
    className="c3"
    style={
      Object {
        "backgroundColor": "#0E90D4",
        "flexDirection": "row",
        "height": 225.25,
      }
    }
  >
    <div
      className="c4"
      style={
        Object {
          "backgroundColor": "#807F80",
          "width": "0%",
        }
      }
    />
    <div
      className="c4"
      style={
        Object {
          "backgroundColor": "#0E90D4",
          "width": "53.37837837837838%",
        }
      }
    />
    <div
      className="c4"
      style={
        Object {
          "backgroundColor": "#00C46A",
          "width": "46.62162162162162%",
        }
      }
    />
    <div
      className="c4"
      style={
        Object {
          "backgroundColor": "#FFCB00",
          "width": "0%",
        }
      }
    />
    <div
      className="c4"
      style={
        Object {
          "backgroundColor": "#FF6430",
          "width": "0%",
        }
      }
    />
    <div
      className="c4"
      style={
        Object {
          "backgroundColor": "#E90000",
          "width": "0%",
        }
      }
    />
  </div>
  <svg
    className="c5"
    height="225.25"
    width="16.666666666666668"
  >
    <polygon
      className="c6"
      points="0,74 0,225.25 16.666666666666668,225.25 16.666666666666668,0"
    />
    <polygon
      className="c7"
      points="0,0 0,74 16.666666666666668,0"
    />
  </svg>
</div>
`;
